--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 THE_USER_CHAT_ID=your_actual_chat_id_here
 TELEGRAM_BOT_TOKEN=your_actual_bot_token_here
+POCKETBASE_URL=http://localhost:8090
+POCKETBASE_ADMIN_EMAIL=
+POCKETBASE_ADMIN_PASSWORD=
