--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
-THE_USER_CHAT_ID=your_actual_chat_id_here
-TELEGRAM_BOT_TOKEN=your_actual_bot_token_here
-POCKETBASE_URL=your_actual_pocketbase_url_here
-POCKETBASE_ADMIN_EMAIL=your_actual_pocketbase_admin_email_here
-POCKETBASE_ADMIN_PASSWORD=your_actual_pocketbase_admin_password_here
+THE_USER_CHAT_ID=
+TELEGRAM_BOT_TOKEN=
+
+# Database Configuration
+# For Local Development (using local Turso file):
+TURSO_CONNECTION_URL=file:local.db
+TURSO_AUTH_TOKEN=unused
+
+# For Production (using remote Turso/LibSQL):
+# TURSO_CONNECTION_URL=libsql://your-db-name.turso.io
+# TURSO_AUTH_TOKEN=your-auth-token
+
+# Admin Credentials (for seeding)
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=securepassword
