--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.18",
+		"@types/leaflet": "^1.9.21",
 		"@types/node": "^24",
 		"drizzle-kit": "^0.31.8",
 		"eslint": "^9.39.1",
@@ -50,6 +51,7 @@
 		"daisyui": "^5.5.14",
 		"dotenv": "^17.2.3",
 		"drizzle-orm": "^0.45.1",
+		"leaflet": "^1.9.4",
 		"lucia": "^3.2.2",
 		"sharp": "^0.34.5"
 	},
