--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
 		"drizzle-orm": "^0.45.1",
 		"leaflet": "^1.9.4",
 		"lucia": "^3.2.2",
-		"sharp": "^0.34.5"
+		"sharp": "^0.34.5",
+		"slugify": "^1.6.6"
 	},
 	"lint-staged": {
 		"*.{js,ts,svelte,json,md}": [
