feat: placeholders, navigation performance, and admin enhancements
- Added premium placeholder images with category-specific fallbacks
- Optimized navigation with progress bar and homepage data streaming
- Implemented admin management for homepage content and contact messages
- Refactored admin forms to use modern components and toast notifications
- Fixed various lints and improved type safety

--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
 		]
 	},
 	"browserslist": [
-		"last 1 major version"
+		"Chrome >= 85",
+		"Firefox >= 94",
+		"Safari >= 15.4",
+		"Edge >= 85"
 	]
 }
