--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"drizzle-orm": "^0.45.1",
 		"leaflet": "^1.9.4",
 		"lucia": "^3.2.2",
+		"oslo": "^1.2.1",
 		"sharp": "^0.34.5",
 		"slugify": "^1.6.6"
 	},
