feat: implement admin profile, security hardening, and favicon update
- Added Admin Profile page with password change functionality
- Implemented secure password change API with Argon2id
- Applied Zod validation and DOMPurify sanitization to:
  - Contact form
  - Admin Ambassadors, Events, News, and Content endpoints
- Updated admin sidebar with Profile link and fixed height layout
- Cleaned up and resized favicon (White on Blue Atom)
- Updated translations

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"db:studio": "drizzle-kit studio",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
-		"db:seed": "npx tsx scripts/seed.js"
+		"db:seed": "npx tsx scripts/seed.js",
+		"deps:check": "npm outdated || true && npm audit || true",
+		"deps:update": "npm update && npm audit fix"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
@@ -51,11 +53,13 @@
 		"daisyui": "^5.5.14",
 		"dotenv": "^17.2.3",
 		"drizzle-orm": "^0.45.1",
+		"isomorphic-dompurify": "^2.35.0",
 		"leaflet": "^1.9.4",
 		"lucia": "^3.2.2",
 		"oslo": "^1.2.1",
 		"sharp": "^0.34.5",
-		"slugify": "^1.6.6"
+		"slugify": "^1.6.6",
+		"zod": "^4.3.5"
 	},
 	"lint-staged": {
 		"*.{js,ts,svelte,json,md}": [
